2024-06-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/sm83/Makefile.in:
	  Fix strnlen build for sm83 port.

2024-06-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/longjmp.c:
	  Disable a test for configuration affected by known bug #3743 (-ms08 --stack-auto).

2024-06-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c (hasExtBitOp),
	  src/mos6502/main.c (hasExtBitOp): fix bug #3731
	* support/regression/tests/sha3-256.c: only enabled for ports
	  that can handle returning large structs 
	* src/mos6502/gen.c (genRet): fail unsupported struct return better

2024-06-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/r2k/setjmp.s
	  device/lib/r2ka/setjmp.s
	  device/lib/r3ka/setjmp.s
	  support/regression/tests/setjmp.c,
	  support/regression/tests/longjmp.c:
	  Fix setjmp/longjmp return value for Rabbits.
	* device/include/string.h,
	  device/lib/strlen.v,
	  device/lib/strnlen.v,
	  device/lib/strndup.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  device/lib/pic14/libc/Makefile.am,
	  device/lib/pic14/libc/Makefile.in,
	  support/regression/tests/strnlen.c:
	  C2Y strnlen.
	* support/regression/tests/bug-3730.c,
	  support/regression/tests/bug-3740.c:
	  Disable warnings on (intentionally) unused parameters in two regression tests.
	* device/lib/tlcs90/setjmp.s:
	  Fix TLCs-90 interrupt flag handling in longjmp.

2024-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp:
	  Fix handling of edges in vertex removal from stack conflict graph on spill location parameter merge.

2024-06-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Fix test for ports without banked function calls.

2024-06-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Add a regression test for a reported bug that I haven't been able to reproduce locally.
